[tool.poetry]
name = "dfa_identify"
version = "0.1.0"
description = "Python library for identifying DFAs from labeled examples."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^20.3.0"
networkx = "^2.5.1"
funcy = "^1.15"
bidict = "^0.21.2"
python-sat = "^0.1.7-alpha.2"
dfa = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pydot = "^1.4.2"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
