[tool.poetry]
name = "dfa_identify"
readme = "README.md"
repository = "https://github.com/mvcisback/dfa-identify"
version = "3.12.0"
description = "Python library for identifying (learning) DFAs (automata) from labeled examples."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=22.0.0"
networkx = "^3"
funcy = "^1.15"
bidict = "^0.22"
python-sat = "1.*"
dfa = "^4"
more-itertools = "^9"

[tool.poetry.dev-dependencies]
pytest = "^7"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
